deploymentconfig/comp6231-project-deployment-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comp6231-project
  labels:
    app: pythonapp
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 100%
  selector:
    matchLabels:
      app: pythonapp
  template:
    metadata:
      labels:
        app: pythonapp
    spec:
      # affinity:
        # This ensures pods will land on separate hosts
        # podAntiAffinity:
          # requiredDuringSchedulingIgnoredDuringExecution:
          # - labelSelector:
          #     matchExpressions: [{ key: app, operator: In, values: [pythonapp] }]
          #   topologyKey: "kubernetes.io/hostname"
      containers:
        - name: comp6231-project
          image: farheenj/comp6231-project-image:latest
          resources:
            limits:
              memory: "500Mi"
              cpu: "500m"
            requests:
              memory: "200Mi"
              cpu: "200m"
          ports:
            - containerPort: 5005
          imagePullPolicy: Always
      terminationGracePeriodSeconds: 1
