deploymentconfig/flaskStarter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pythonapp-deployment
  labels:
    app: pythonapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pythonapp
  template:
    metadata:
      labels:
        app: pythonapp
    spec:
      containers:
        - name: demoflask
          image: farheenj/demoflask:latest
          resources:
            limits:
              memory: "200Mi"
              cpu: "500m"
            requests:
              memory: "100Mi"
              cpu: "100m"
          ports:
            - containerPort: 5005
          imagePullPolicy: IfNotPresent
      imagePullSecrets:
        - name: privatedocker
