deploymentconfig/counterapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counterapp-service
spec:
  selector:
    app: counterapp
  ports:
  - protocol: "TCP"
    port: 5005
    targetPort: 5005
  type: LoadBalancer
