deploymentconfig/lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-service
spec:
  selector:
    app: pythonapp
  ports:
  - protocol: "TCP"
    port: 5005
    targetPort: 5005
  type: LoadBalancer
