deploymentconfig/node-port-demo.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-port-demo
spec:
  type: NodePort
  selector:
    app: pythonapp
  ports:
    - port: 5005
      targetPort: 5005
      nodePort: 30007
