deploymentconfig/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-svc
  labels:
    run: python-svc
spec:
  type: NodePort
  ports:
  - port: 5005
    protocol: TCP
  selector:
    app: pythonapp
