deploymentconfig/test-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-lb
  labels:
    run: test-lb
spec:
  selector:
    app: pythonapp
  ports:
    - port: 5005
      targetPort: 5005
  type: LoadBalancer
